3821B1PE1/8_fft_cufft/vinichuk_timofey/log.txt
/home/crazyproger/sandbox/cuda-2024/3821B1PE1/8_fft_cufft/vinichuk_timofey/fft_cufft.cu(16): error: identifier "cufftHandle" is undefined
   cufftHandle handle;
   ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/8_fft_cufft/vinichuk_timofey/fft_cufft.cu(17): error: identifier "CUFFT_C2C" is undefined
   cufftPlan1d(&handle, n, CUFFT_C2C, batch);
                           ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/8_fft_cufft/vinichuk_timofey/fft_cufft.cu(17): error: identifier "cufftPlan1d" is undefined
   cufftPlan1d(&handle, n, CUFFT_C2C, batch);
   ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/8_fft_cufft/vinichuk_timofey/fft_cufft.cu(19): error: identifier "cufftComplex" is undefined
   cufftComplex* data;
   ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/8_fft_cufft/vinichuk_timofey/fft_cufft.cu(19): error: identifier "data" is undefined
   cufftComplex* data;
                 ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/8_fft_cufft/vinichuk_timofey/fft_cufft.cu(28): error: identifier "CUFFT_FORWARD" is undefined
   cufftExecC2C(handle, data, data, CUFFT_FORWARD);
                                    ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/8_fft_cufft/vinichuk_timofey/fft_cufft.cu(28): error: identifier "cufftExecC2C" is undefined
   cufftExecC2C(handle, data, data, CUFFT_FORWARD);
   ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/8_fft_cufft/vinichuk_timofey/fft_cufft.cu(29): error: identifier "CUFFT_INVERSE" is undefined
   cufftExecC2C(handle, data, data, CUFFT_INVERSE);
                                    ^

/home/crazyproger/sandbox/cuda-2024/3821B1PE1/8_fft_cufft/vinichuk_timofey/fft_cufft.cu(48): error: identifier "cufftDestroy" is undefined
   cufftDestroy(handle);
   ^

9 errors detected in the compilation of "/home/crazyproger/sandbox/cuda-2024/3821B1PE1/8_fft_cufft/vinichuk_timofey/fft_cufft.cu".
